--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/jpmedley/webxr-glitch/issues"
   },
-  "homepage": "https://github.com/jpmedley/webxr-glitch#readme"
+  "homepage": "https://github.com/jpmedley/webxr-glitch#readme",
+  "dependencies": {
+    "http-server": "^0.11.1"
+  }
 }
